# chi2026

./: .gitignore  README.md  data_analysis.ipynb  environment.yml  pyproject.toml
data/descriptions/: d0_human_structured_descriptions.csv  d10_sonnet_non_structured_descriptions.csv  d11_grok_non_structured_descriptions.csv  d1_gpt-4o_structured_descriptions.csv  d2_gpt-5_structured_descriptions.csv  (+7 more)
outputs/: r0_similarity_anova_results.csv  r10_chi_square_results.csv  r11_pairwise_results.csv  r12_significant_pairwise_results.csv  r13_pairwise_summary.csv  r14_significant_pairwise_results.csv  r15_pairwise_summary.csv  r1_similarity_anova_results.csv  r2_similarity_tukey_hsd_results.csv  r3_similarity_tukey_hsd_results.csv  r4_similarity_stats_results.csv  r5_similarity_stats_results.csv  r6_accuracy_results.csv  r7_chi_square_results.csv  r8_pairwise_results.csv  r9_accuracy_results.csv
pgf/: f0_semantic_similarity_scatter_plot.pgf  f1_semantic_similarity_scatter_plot.pgf  f2_semantic_similarity_box_plot.pgf  f3_semantic_similarity_box_plot.pgf  f4_df_pairwise_summary.pgf  f5_hand_gesture_accuracy_bar_plot.pgf  f6_hand_gesture_accuracy_bar_plot.pgf
src/: s10_generate_command_predictions.py  s1_openai_structured_descriptions.py  s2_gemini_structured_descriptions.py  s3_sonnet_structured_descriptions.py  s4_grok_structured_descriptions.py  s5_human_non_structured_descriptions.py  s6_openai_non_structured_descriptions.py  s7_gemini_non_structured_descriptions.py  s8_sonnet_non_structured_descriptions.py  s9_grok_non_structured_descriptions.py
(+12 files in other folders)
