[project]
name = "chi2026"
version = "0.1.0"
description = "Beyond Recognition: Comparative Analysis of Human and AI-Generated Textual Annotations of Mid-Air Hand Gestures"
authors = [
    {name = "Anonymous Authors",email = "anonymous-authors-repository@github.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "openai (>=1.82.1,<2.0.0)",
    "google-genai (>=1.17.0,<2.0.0)",
    "ollama (>=0.5.0,<0.6.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastdtw (>=0.3.4,<0.4.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "xai-sdk (>=1.0.1,<2.0.0)",
    "anthropic (>=0.64.0,<0.65.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
